# scrap-engine

./: .gitignore  .syntastic_cpp_config  CMakeLists.txt  Makefile  README.md
share/scrap/shaders/: basic.vert  cairo_gui.frag  cairo_gui.vert
src/: CMakeLists.txt  camera.h  config.h  doodad.cc  doodad.h  engine.cc  engine.h  example_scene.cc  example_scene.h  main.cc  model.cc  model.h  scene.h  scrapit
src/gl/: shader_program.cc
src/salvage/: CMakeLists.txt  example_scene.cc  example_scene.h  main.cc  world.cc  world.h  world_loader.cc  world_loader.h
src/scene/: model_scene.cc  model_scene.h
src/scrap/: CMakeLists.txt  camera.cc  camera.h  config.h  config.h.in  decal.cc  decal.h  doodad.cc  doodad.h  engine.cc  engine.h  example_scene.cc  example_scene.h  material.cc  material.h  model.cc  model.h  renderer.cc  renderer.h  scene.h  settings.h  texture.cc  texture.h
src/scrap/gl/: README  buffer.cc  buffer.h  cairo_renderer.cc  cairo_renderer.h  gl_config.h  material.cc  material.h  model.cc  model.h  model_renderer.cc  model_renderer.h  program.cc  program.h  registry.cc  registry.h  shader.cc  shader.h  shader_program.h  texture.cc  texture.h
src/scrap/gl/shader/: cairo_gui.vert
src/scrap/gui/: cairo_renderer.cc  cairo_renderer.h  cairo_texture.cc  cairo_texture.h  coord.cc  coord.h  coords.cc  coords.h  drawable.h  drawable_group.cc  drawable_group.h
src/scrap/scene/: model_scene.cc  model_scene.h
src/scrap/shader/: basic.frag  basic.vert  basic_program.cc  basic_program.h
src/scrap/util/: obj_loader.cc  obj_loader.h
src/util/: obj_loader.h
test/: CMakeLists.txt  test_obj_loader.cc
